[package]
name = "tak"
version = "0.1.0"
authors = ["Reinoud Kruithof <reinoud.kruithof@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
git2 = "0.13"
semver = "0.9.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3"