[package]
name = "tak"
version = "0.3.0"
authors = ["Reinoud Kruithof <reinoud.kruithof@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = [ "derive" ] }
git2 = "0.13"
lazy_static = "1.4.0"
regex = "1"
semver = "0.9.0"

[dev-dependencies]
assert_cmd = "1.0"
tempfile = "3"
